[package]
name = "lexper"
version = "0.0.3"
edition = "2024"
description = "A simple CLI calculator with a handwritten lexer and parser in Rust."
license-file = "LICENSE.txt"
repository = "https://github.com/JerryImMouse/lexper"
readme = "README.md"
authors = ["JerryImMouse"]

keywords = ["calculator", "parser", "lexer", "expression"]
categories = ["command-line-utilities", "parsing", "mathematics"]
documentation = "https://docs.rs/lexper"
homepage = "https://github.com/JerryImMouse/lexper"
exclude = ["/target", "**/*.rs.bk", ".vscode", ".idea"]

[badges]
maintenance = { status = "passively-maintained" }
